<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->
<resources>
    <string name="app_name">Sensor Data TRNG</string>
    <string name="error_no_sensor">No %1$s sensor found!</string>
    <string name="export_sensor_data">Export Sensor Data</string>
    <string name="gen">Generate Random Number</string>
    <string name="export_numbers">Export Numbers</string>
    <string name="rand">%1s</string>
    <string name="label_accelerometer">Accelerometer: %1$f %2$f %3$f m/s2</string>
    <string name="label_gyroscope">Gyroscope: %1$f %2$f %3$f rad/s</string>
    <string name="label_magnetometer">Magnetometer: %1$f %2$f %3$f μT</string>
    <string name="logging">Logging…</string>
    <string name="bytes_needed">Enter bytes needed (1 to 16)</string>
</resources>
